--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="site.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header class="header-container-padre">
-        <a href="/" class="logo">
-          <img src="https://getmatcha.com/wp-content/themes/getmatcha/img/footer_logo.svg"alt="Logo"/>
-        </a>
-        <nav class="navbar">
-          <ul >
-            <li><a href="/">Platform</a></li>
-            <li><a href="/">Pricing</a></li>
-            <li><a href="/">Customer</a></li>
-            <li><a href="/">Resources</a></li>
-            <li><a href="/">About</a></li>
-          </ul>
-        </nav>
-        <div class="actions">
-          <a href="/">Sign In</a>
-          <button>Start free trial</button>
-        </div>
-    </header>
+.header-container-padre {
+    vertical-align: middle;
+    margin: 40px 20px 0 20px;
+    height: 45px;
+}
 
-    <main>
-        <h1>Título principal</h1>
-        <section>
-            <article>
-                <h2>Arte</h2>
-                <img src="" alt=""/>
-                <p></p>
-            </article>
-        </section>
-        <section>
-            <article>
-                <h2>Deportes</h2>
-                <img src="" alt=""/>
-                <p></p>
-            </article>
-        </section>
-    </main>
-    <div>
-        <section>
-            <article>
-                <h2>Tecnología</h2>
-                <img src="" alt=""/>
-                <p></p>
-            </article>
-        </section>
-        <section>
-            <article>
-                <h2>Cualquier cosa</h2>
-                <img src="" alt=""/>
-                <p></p>
-            </article>
-        </section>
-    </div>
-    <aside>
-        <div>social media</div>
-        <div>spotify</div>
-        <div><a href="#"></a></div>
-    </aside>
-    <footer>
-        <a href="/">
-            <img src="https://getmatcha.com/wp-content/themes/getmatcha/img/footer_logo.svg" alt="Matcha">
-        </a>
-        <p>&copy;2020 Matcha Co. All rights reserved</p>
-    </footer>
-  </body>
-</html>
+.header-container-padre > * {
+    display: inline-block;
+    font-size: 16px;
+    vertical-align: middle;
+    height: 100%;
+    font-family: sans-serif;
+}
+
+.logo {
+    width: 12%;
+    text-decoration: none;
+}
+.logo > img {
+    height: 100%;
+}
+
+.navbar {
+    width: 70% !important;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+}
+.navbar > ul > li {
+    display: inline;
+    margin: 0 25px;
+}
+
+.navbar > ul > li > a {
+    text-decoration: none;
+    color: #025157;
+}
+.actions {
+    width: 18%;
+    display: inline;
+    text-align: right;
+    font-size: 14px;
+}
+
+.actions a {
+    text-decoration: none;
+    color: #67b54b;
+    display: inline;
+    margin: 0 10px;
+}
+
+.actions button {
+    display: inline;
+    margin: 0 10px;
+    padding: 12px 14px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    background-color: #67b54b;
+}
+
+footer > * {
+    display: inline;
+}
