--- a/styles.css
+++ b/styles.css
@@ -62,3 +62,14 @@
 footer > * {
     display: inline;
 }
+
+.explanatory-video {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .explanatory-video img {
+    width: 120px;
+    margin-top: 10px;
+  }
